Upload new libbottles dev docs

--- a/libbottles/utils/index.html
+++ b/libbottles/utils/index.html
@@ -26,6 +26,10 @@
 <section>
 <h2 class="section-title" id="header-submodules">Sub-modules</h2>
 <dl>
+<dt><code class="name"><a title="libbottles.utils.checks" href="checks.html">libbottles.utils.checks</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="libbottles.utils.connection" href="connection.html">libbottles.utils.connection</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -56,6 +60,7 @@
 </li>
 <li><h3><a href="#header-submodules">Sub-modules</a></h3>
 <ul>
+<li><code><a title="libbottles.utils.checks" href="checks.html">libbottles.utils.checks</a></code></li>
 <li><code><a title="libbottles.utils.connection" href="connection.html">libbottles.utils.connection</a></code></li>
 <li><code><a title="libbottles.utils.request" href="request.html">libbottles.utils.request</a></code></li>
 </ul>
